--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@jniac/three-point-text-helper": "^1.0.10",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
+    "@react-three/rapier": "^2.2.0",
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "events": "^3.3.0",
     "gl-matrix": "^3.4.4",
+    "leva": "^0.10.1",
     "lil-gui": "^0.20.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
